--- a/css/styles-mini.css
+++ b/css/styles-mini.css
@@ -95,6 +95,7 @@ body {
     font-family: Arial, sans-serif;
     max-width: 480px;
     margin: 0 auto;
+    background-color: #f8f8f8;
 }
 
 .container-width {
