--- a/css/styles-large.css
+++ b/css/styles-large.css
@@ -91,10 +91,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 0;
+    padding: 30px;
     font-family: Arial, sans-serif;
     max-width: 480px;
     margin: 0 auto;
+    background-color: #f8f8f8;
 }
 
 .container-width {
